--- a/charts/argo-cd/argocd-ingress.yaml
+++ b/charts/argo-cd/argocd-ingress.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: internal.path.to.argocd.io
+  - host: argocd.gam-linux.win
     http:
       paths:
       - path: /
@@ -17,3 +17,6 @@ spec:
             name: argocd-server
             port:
               number: 80
+
+
+              git commit -m 'add updated argo-cd chart
