--- a/charts/argo-cd/argocd-ingress.yaml
+++ b/charts/argo-cd/argocd-ingress.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: argocd-ingress
+  namespace: argocd
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
@@ -18,5 +19,3 @@ spec:
             port:
               number: 80
 
-
-              git commit -m 'add updated argo-cd chart
